--- a/views/client.ejs
+++ b/views/client.ejs
@@ -1,19 +1,81 @@
 <!doctype html>
 <html lang="en">
 
-    <%- include('header'); -%>
+  <%- include('header'); -%>
 
-    <h2 class="title">ECS Example Game</h2>
+  <div class="container">
+  
 
     <div id="game">
-        <div v-if="connected">
-            <%- include('chat'); -%>
-        </div>
-        <div v-else>
-            <p>Connecting...</p>
-        </div>
-    </div>
+      <!-- Only once socket is connected -->
+      <div v-if="connected">
 
-    <%- include('footer'); -%>
+        <!-- ============ LOGIN / REGISTER BOX ============ -->
+        <div v-if="!loggedIn" class="auth-wrapper">
+          <div class="auth-card">
+
+            <!-- LOGO -->
+            <div class="logo-wrap">
+              <img src="/static/quiplash-logo.png"
+                   alt="Quiplash Logo"
+                   class="game-logo">
+            </div>
+
+            <div class="form-group">
+              <input type="text"
+                     class="form-control"
+                     v-model="username"
+                     placeholder="Enter your username">
+            </div>
+
+            <div class="form-group">
+              <input type="password"
+                     class="form-control"
+                     v-model="password"
+                     placeholder="Enter your password">
+            </div>
+
+            <div class="form-group button-row">
+              <button class="btn btn-primary" @click="login">Login</button>
+              <button class="btn btn-secondary" @click="register">Register</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- ============ GAME UI AFTER LOGIN ============ -->
+        <div v-else class="game-wrapper">
+          <h3>Chat</h3>
+
+          <div class="form-group">
+            <input type="text"
+                   @keyup.enter="chat()"
+                   v-model="chatmessage"
+                   class="form-control"
+                   placeholder="Type a message and press Enter">
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary" @click="chat">Send</button>
+          </div>
+
+          <ul id="chat">
+            <li v-for="message in messages">{{ message }}</li>
+          </ul>
+        </div>
+
+      </div>
+
+      <!-- While not connected yet -->
+      <div v-else>
+        <p>Connecting...</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- scripts -->
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+  <script src="/static/client.js"></script>
+
+  <%- include('footer'); -%>
 
 </html>
